# uni-context

./: .gitignore  CHANGELOG.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: test.yml
cmd/unictx/: main.go
docs/: vision.md
internal/adapter/fsstore/: store.go  (+1 more)
internal/app/: app.go  app_reconcile_test.go  app_test.go  pdf_test.go
internal/cli/: config_cmd.go  doctor.go  e2e_backfill_test.go  e2e_hybrid_test.go  e2e_test.go  embed.go  embed_run_e_test.go  embed_status_test.go  embed_test.go  root.go  search.go  search_test.go  user_note.go  user_note_run_e_test.go  user_note_test.go
internal/config/: config.go  config_test.go
internal/domain/: context.go  context_test.go  errors.go  project.go  project_test.go
internal/port/: embedder.go  embeddingrepo.go  modelregistry.go  repository.go  searcher.go  vectorstore.go
internal/service/: backfill.go  backfill_test.go  diagnostic.go  embed.go  embed_test.go  fake_repo_test.go  fixture_test.go  ingest.go  ingest_test.go  reembed.go  reembed_test.go  reindex_fts.go  reindex_fts_test.go  search.go  search_fixture_test.go  search_hybrid_test.go  search_test.go  worker.go  worker_test.go
python/: .gitignore  pyproject.toml
python/spikes/migration-spike/: spike.py
python/src/unictx/: __init__.py  config.py  errors.py
python/src/unictx/cli/: __init__.py  access_cmd.py  app.py  doctor.py  embed_cmd.py  output.py  reindex_fts_cmd.py  search.py  user_note.py
python/src/unictx/embed/: backfill.py  diagnostic.py  embedder.py  embedding_repo.py  errors.py  model_registry.py  model_service.py  ollama.py  openai.py  reembed.py  service.py  worker.py
python/src/unictx/items/: access_service.py  errors.py  ingest.py  item_service.py  models.py  reindex_fts.py  repo.py
python/src/unictx/pdf/: errors.py  extractor.py  factory.py  fitz_engine.py  http_engine.py  shell_engine.py
python/src/unictx/search/: searcher.py  service.py  vectorstore.py
python/src/unictx/storage/: access_repo_impl.py  db.py  embedding_repo_impl.py  filestore.py  migrations_runner.py  model_registry_impl.py  repo_impl.py  row_factory.py  schema_meta.py  search_adapter.py  searcher_impl.py  vectorstore_impl.py
python/src/unictx/storage/migrations/: 0001_init.sql  0004_embedding_model_slug_cascade.sql  0005_access_grants.sql
python/tests/: conftest.py  test_config.py  test_errors.py  test_fakes.py  test_protocols.py
python/tests/_fakes/: canned_filestore.py  fake_access_repo.py  fake_embedder.py  fake_repo.py
python/tests/cli/: conftest.py  test_access_cmd.py  test_app.py  test_doctor.py  test_e2e_flows.py  test_embed_cmd.py  test_no_direct_storage_import.py  test_output.py  test_reindex_fts_cmd.py  test_search.py  test_user_note.py
python/tests/embed/: test_backfill.py  test_diagnostic.py  test_model_service.py  test_ollama.py  test_openai.py  test_reembed.py  test_service.py  test_worker.py
python/tests/items/: test_access_models.py  test_errors.py  test_ingest.py  test_item_service.py  test_models.py  test_reindex_fts.py
python/tests/pdf/: test_factory.py  test_fitz_engine.py  test_http_engine.py  test_shell_engine.py
python/tests/search/: test_service.py
python/tests/storage/: test_access_repo_impl.py  test_db.py  test_embedding_repo_impl.py  test_filestore.py  test_migrations.py  test_model_registry_impl.py  test_repo_impl.py  test_schema_meta.py  test_searcher_impl.py  test_vectorstore_impl.py
spikes/python-migration/: main.py  pyproject.toml  spike.py
(+82 files in other folders)
