[project]
name = "unictx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zead", email = "zh.impact@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.9",
    "typer>=0.26.8",
]

[project.scripts]
unictx = "unictx:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "PT"]

[tool.ruff.lint.isort]
known-first-party = ["unictx"]
