[project]
name = "unictx"
version = "0.1.0"
description = "Personal context management — notes, PDFs, and search with hybrid retrieval"
readme = "README.md"
authors = [
    { name = "zead", email = "zh.impact@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.9",
    "typer>=0.26.8",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

# CLI entry point. ``unictx.cli:app`` resolves to the Typer instance
# exported by ``unictx/cli/__init__.py``; importing that module runs
# the ``app.add_typer(...)`` / ``app.command(...)`` registrations, so
# the returned ``app`` is fully wired. Typer instances are callable
# (their ``__call__`` dispatches the CLI), so this works as a console
# script entry point.
[project.scripts]
unictx = "unictx.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "PT"]

[tool.ruff.lint.isort]
known-first-party = ["unictx"]

[tool.ruff.lint.per-file-ignores]
# CLI files use Typer idioms (typer.Option in default position) and don't
# carry pytest fixtures. Disable PT family + B008 (function call in
# argument default — Typer requires it) for the whole cli/ subtree.
"src/unictx/cli/*" = ["PT", "B008"]
